# KD-app

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  Dockerfile  README.md  apply_migrations.py  cleanup_duplicates.py  db.sqlite3  db.sqlite3.bak  docker-compose.yml  entrypoint.sh  env.example  frontend_integration_guide.md  index.html  manage.py  monitoring.yml  pyproject.toml  pytest.ini  pytest_output.txt  requirements.txt  requirements_current.txt  setup.py  test_data.py  test_exit_code.txt  test_output.txt
.github/workflows/: ci.yml  django.yml
delivery/: admin.py  apps.py  consumers.py  models.py  query_optimizations.py  routers.py  routing.py  serializers.py  services.py  signals.py  tasks.py  translation.py  urls.py  utils.py  validators.py  views.py
delivery/migrations/: 0001_initial.py  0002_alter_userprofile_phone_number.py  0002_deliveryzone_restaurant_order_actual_delivery_time_and_more.py  0003_alter_order_payment_method.py  0004_order_courier_fee_order_service_fee.py  0005_order_restaurant.py  0006_deliveryperson_avg_rating_deliveryzone_avg_rating_and_more.py  0007_userprofile.py  0008_restaurant_partner_user.py  0009_deliveryperson_document_back_image_and_more.py  0010_payout.py  0011_promocode.py  0012_alter_order_status.py  0013_payment.py  0014_devicetoken.py  0019_alter_category_options_alter_order_options_and_more.py  (+2 more)
karakol_delivery/: settings.py
karakoldelivery/: asgi.py  celery.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
scripts/: create_test_user.py  test_serialize.py
(+25 files in other folders)
