[tool.poetry]
name = "karakol-delivery-backend"
version = "0.1.0"
description = "Backend for Karakol Delivery Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
celery = "^5.3.4"
redis = "^5.0.1"
gunicorn = "^21.2.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.2.0"
django-filter = "^23.3"
pillow = "^10.1.0"
sentry-sdk = "^1.38.0"
django-redis = "^5.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
coverage = "^7.3.2"
ipython = "^8.17.2"
django-extensions = "^3.2.3"
werkzeug = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "karakoldelivery.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["delivery"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "pass",
    "if __name__ == .__main__.:"
]
